Fix:수리 이력 조회

--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -45,7 +45,15 @@
     "active": "활성",
     "inactive": "비활성",
     "duplicate": "복제",
-    "create": "생성"
+    "create": "생성",
+    "weekdaySun": "일",
+    "weekdayMon": "월",
+    "weekdayTue": "화",
+    "weekdayWed": "수",
+    "weekdayThu": "목",
+    "weekdayFri": "금",
+    "weekdaySat": "토",
+    "month": "월"
   },
   "auth": {
     "login": "로그인",
@@ -381,9 +389,15 @@
     "department": "부서",
     "position": "직책",
     "role": "권한",
-    "roleAdmin": "관리자",
-    "roleSupervisor": "슈퍼바이저",
-    "roleTechnician": "테크니션",
+    "departmentGeneralManagement": "종합 관리실",
+    "departmentFacilityManagement": "설비 관리팀",
+    "positionSystemAdmin": "시스템 관리자",
+    "positionFacilityManager": "설비 관리자",
+    "positionRepairStaff": "수리 직원",
+    "positionViewer": "뷰어",
+    "roleAdmin": "시스템 관리자",
+    "roleSupervisor": "설비 관리자",
+    "roleTechnician": "수리 직원",
     "roleViewer": "뷰어",
     "active": "활성",
     "inactive": "비활성",
@@ -391,20 +405,22 @@
     "addUser": "사용자 추가",
     "editUser": "사용자 수정",
     "searchPlaceholder": "이름, 이메일로 검색",
+    "allDepartments": "전체 부서",
+    "allPositions": "전체 직책",
     "allRoles": "전체 권한",
     "allStatus": "전체 상태",
     "totalUsers": "전체 사용자",
     "activeUsers": "활성 사용자",
-    "technicians": "테크니션",
+    "technicians": "수리 직원",
     "admins": "관리자",
     "resetPassword": "비밀번호 초기화",
     "passwordResetSuccess": "비밀번호가 초기화되었습니다",
     "rolePermissionTitle": "권한별 페이지 접근 관리",
-    "rolePermissionDesc": "각 권한별로 접근 가능한 페이지를 설정합니다. 관리자는 모든 페이지에 접근할 수 있습니다.",
+    "rolePermissionDesc": "각 권한별로 접근 가능한 페이지를 설정합니다. 시스템 관리자는 모든 페이지에 접근할 수 있습니다.",
     "pageCategory": "페이지 분류",
     "pageName": "페이지명",
     "canAccess": "접근 가능",
-    "adminAlwaysAccess": "관리자 항상 접근",
+    "adminAlwaysAccess": "시스템 관리자 항상 접근",
     "permissionUpdated": "권한이 업데이트되었습니다",
     "categoryDashboard": "대시보드",
     "categoryEquipment": "설비관리",
@@ -412,7 +428,37 @@
     "categoryAnalytics": "분석",
     "categoryAI": "AI",
     "categoryAdmin": "관리",
-    "categoryProfile": "프로필"
+    "categoryProfile": "프로필",
+    "selectDepartment": "부서를 선택하세요",
+    "selectPosition": "직책을 선택하세요",
+    "allAccess": "모든 접근",
+    "pageAccessPermissions": "페이지 접근 권한",
+    "pageGroupDashboard": "대시보드",
+    "pageGroupEquipment": "설비관리",
+    "pageGroupMaintenance": "수리관리",
+    "pageGroupAnalytics": "분석",
+    "pageGroupAI": "AI",
+    "pageGroupAdmin": "관리",
+    "pageGroupProfile": "프로필",
+    "permissionNote": "시스템 관리자 권한 안내",
+    "permissionNoteDesc": "시스템 관리자는 모든 페이지에 접근할 수 있으며, 권한을 변경할 수 없습니다.",
+    "cannotModifyAdmin": "권한 변경 불가",
+    "adminHasAllAccess": "시스템 관리자는 모든 권한을 가집니다.",
+    "permissionsSaved": "권한 저장 완료",
+    "permissionsSavedDesc": "권한 설정이 성공적으로 저장되었습니다.",
+    "userCreated": "사용자 생성 완료",
+    "userUpdated": "사용자 수정 완료",
+    "emailRequired": "이메일을 입력해주세요",
+    "emailInvalid": "올바른 이메일 형식이 아닙니다",
+    "passwordRequired": "비밀번호를 입력해주세요",
+    "passwordTooShort": "비밀번호는 6자 이상이어야 합니다",
+    "nameRequired": "이름을 입력해주세요",
+    "departmentRequired": "부서를 선택해주세요",
+    "positionRequired": "직책을 선택해주세요",
+    "leaveEmptyToKeep": "빈 값이면 기존 유지",
+    "enterPassword": "비밀번호 입력",
+    "enterName": "이름 입력",
+    "searchByNameEmail": "이름 또는 이메일로 검색"
   },
   "settings": {
     "general": "일반 설정",
