--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -45,7 +45,15 @@
     "active": "Hoạt động",
     "inactive": "Không hoạt động",
     "duplicate": "Sao chép",
-    "create": "Tạo mới"
+    "create": "Tạo mới",
+    "weekdaySun": "CN",
+    "weekdayMon": "T2",
+    "weekdayTue": "T3",
+    "weekdayWed": "T4",
+    "weekdayThu": "T5",
+    "weekdayFri": "T6",
+    "weekdaySat": "T7",
+    "month": "tháng"
   },
   "auth": {
     "login": "Đăng nhập",
@@ -381,9 +389,15 @@
     "department": "Phòng ban",
     "position": "Chức vụ",
     "role": "Quyền",
-    "roleAdmin": "Quản trị viên",
-    "roleSupervisor": "Giám sát",
-    "roleTechnician": "Kỹ thuật viên",
+    "departmentGeneralManagement": "Phòng quản lý tổng hợp",
+    "departmentFacilityManagement": "Phòng quản lý thiết bị",
+    "positionSystemAdmin": "Quản trị viên hệ thống",
+    "positionFacilityManager": "Quản lý thiết bị",
+    "positionRepairStaff": "Nhân viên sửa chữa",
+    "positionViewer": "Người xem",
+    "roleAdmin": "Quản trị viên hệ thống",
+    "roleSupervisor": "Quản lý thiết bị",
+    "roleTechnician": "Nhân viên sửa chữa",
     "roleViewer": "Người xem",
     "active": "Hoạt động",
     "inactive": "Không hoạt động",
@@ -391,20 +405,22 @@
     "addUser": "Thêm người dùng",
     "editUser": "Sửa người dùng",
     "searchPlaceholder": "Tìm theo tên, email",
+    "allDepartments": "Tất cả phòng ban",
+    "allPositions": "Tất cả chức vụ",
     "allRoles": "Tất cả quyền",
     "allStatus": "Tất cả trạng thái",
     "totalUsers": "Tổng người dùng",
     "activeUsers": "Người dùng hoạt động",
-    "technicians": "Kỹ thuật viên",
+    "technicians": "Nhân viên sửa chữa",
     "admins": "Quản trị viên",
     "resetPassword": "Đặt lại mật khẩu",
     "passwordResetSuccess": "Đã đặt lại mật khẩu",
     "rolePermissionTitle": "Quản lý quyền truy cập trang theo vai trò",
-    "rolePermissionDesc": "Cấu hình trang có thể truy cập cho mỗi vai trò. Quản trị viên luôn có quyền truy cập tất cả các trang.",
+    "rolePermissionDesc": "Cấu hình trang có thể truy cập cho mỗi vai trò. Quản trị viên hệ thống luôn có quyền truy cập tất cả các trang.",
     "pageCategory": "Phân loại trang",
     "pageName": "Tên trang",
     "canAccess": "Có thể truy cập",
-    "adminAlwaysAccess": "Quản trị viên luôn truy cập",
+    "adminAlwaysAccess": "Quản trị viên hệ thống luôn truy cập",
     "permissionUpdated": "Quyền đã được cập nhật",
     "categoryDashboard": "Bảng điều khiển",
     "categoryEquipment": "Quản lý thiết bị",
@@ -412,7 +428,37 @@
     "categoryAnalytics": "Phân tích",
     "categoryAI": "AI",
     "categoryAdmin": "Quản trị",
-    "categoryProfile": "Hồ sơ"
+    "categoryProfile": "Hồ sơ",
+    "selectDepartment": "Chọn phòng ban",
+    "selectPosition": "Chọn chức vụ",
+    "allAccess": "Truy cập tất cả",
+    "pageAccessPermissions": "Quyền truy cập trang",
+    "pageGroupDashboard": "Bảng điều khiển",
+    "pageGroupEquipment": "Quản lý thiết bị",
+    "pageGroupMaintenance": "Quản lý sửa chữa",
+    "pageGroupAnalytics": "Phân tích",
+    "pageGroupAI": "AI",
+    "pageGroupAdmin": "Quản trị",
+    "pageGroupProfile": "Hồ sơ",
+    "permissionNote": "Thông báo quyền quản trị viên hệ thống",
+    "permissionNoteDesc": "Quản trị viên hệ thống có quyền truy cập tất cả các trang và không thể thay đổi quyền.",
+    "cannotModifyAdmin": "Không thể thay đổi quyền",
+    "adminHasAllAccess": "Quản trị viên hệ thống có tất cả các quyền.",
+    "permissionsSaved": "Đã lưu quyền",
+    "permissionsSavedDesc": "Cài đặt quyền đã được lưu thành công.",
+    "userCreated": "Đã tạo người dùng",
+    "userUpdated": "Đã cập nhật người dùng",
+    "emailRequired": "Vui lòng nhập email",
+    "emailInvalid": "Định dạng email không hợp lệ",
+    "passwordRequired": "Vui lòng nhập mật khẩu",
+    "passwordTooShort": "Mật khẩu phải có ít nhất 6 ký tự",
+    "nameRequired": "Vui lòng nhập tên",
+    "departmentRequired": "Vui lòng chọn phòng ban",
+    "positionRequired": "Vui lòng chọn chức vụ",
+    "leaveEmptyToKeep": "Để trống để giữ nguyên",
+    "enterPassword": "Nhập mật khẩu",
+    "enterName": "Nhập tên",
+    "searchByNameEmail": "Tìm theo tên hoặc email"
   },
   "settings": {
     "general": "Cài đặt chung",
