system database 초기화

--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -16,6 +16,7 @@
     "warning": "Cảnh báo",
     "required": "Bắt buộc",
     "actions": "Thao tác",
+    "status": "Trạng thái",
     "filter": "Bộ lọc",
     "reset": "Đặt lại",
     "resetFilter": "Đặt lại bộ lọc",
@@ -63,6 +64,7 @@
     "forgotPassword": "Quên mật khẩu",
     "rememberMe": "Ghi nhớ đăng nhập",
     "loginFailed": "Đăng nhập thất bại",
+    "userNotFound": "Không tìm thấy người dùng đã đăng ký",
     "selectLanguage": "Chọn ngôn ngữ"
   },
   "nav": {
@@ -499,7 +501,37 @@
     "monthly": "Hàng tháng",
     "retentionDays": "Thời gian lưu giữ",
     "backupNow": "Sao lưu ngay",
-    "backupStarted": "Đã bắt đầu sao lưu"
+    "backupStarted": "Đã bắt đầu sao lưu",
+    "saved": "Cài đặt đã được lưu",
+    "equipmentTypes": "Quản lý loại thiết bị",
+    "addEquipmentType": "Thêm loại thiết bị",
+    "editEquipmentType": "Sửa loại thiết bị",
+    "editRepairType": "Sửa loại sửa chữa",
+    "code": "Mã",
+    "name": "Tên",
+    "nameKo": "Tên tiếng Hàn",
+    "nameVi": "Tên tiếng Việt",
+    "category": "Phân loại",
+    "categoryMain": "Thiết bị chính",
+    "categorySub": "Thiết bị phụ",
+    "description": "Mô tả",
+    "color": "Màu sắc",
+    "priority": "Độ ưu tiên",
+    "priorityHighest": "Cao nhất",
+    "priorityHigh": "Cao",
+    "priorityMedium": "Trung bình",
+    "priorityLow": "Thấp",
+    "priorityLowest": "Thấp nhất",
+    "fillRequired": "Vui lòng điền các trường bắt buộc",
+    "confirmDelete": "Bạn có chắc chắn muốn xóa?",
+    "confirmDeleteTitle": "Xác nhận xóa",
+    "confirmDeleteMessage": "sẽ bị xóa. Hành động này không thể hoàn tác.",
+    "equipmentTypeCreated": "Loại thiết bị đã được tạo",
+    "equipmentTypeUpdated": "Loại thiết bị đã được cập nhật",
+    "equipmentTypeDeleted": "Loại thiết bị đã bị xóa",
+    "repairTypeCreated": "Loại sửa chữa đã được tạo",
+    "repairTypeUpdated": "Loại sửa chữa đã được cập nhật",
+    "repairTypeDeleted": "Loại sửa chữa đã bị xóa"
   },
   "profile": {
     "profileInfo": "Thông tin cá nhân",
