--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -16,6 +16,7 @@
     "warning": "경고",
     "required": "필수 항목입니다",
     "actions": "작업",
+    "status": "상태",
     "filter": "필터",
     "reset": "초기화",
     "resetFilter": "필터 초기화",
@@ -63,6 +64,7 @@
     "forgotPassword": "비밀번호 찾기",
     "rememberMe": "자동 로그인",
     "loginFailed": "로그인에 실패했습니다",
+    "userNotFound": "등록된 사용자를 찾을 수 없습니다",
     "selectLanguage": "언어 선택"
   },
   "nav": {
@@ -499,7 +501,37 @@
     "monthly": "매월",
     "retentionDays": "보관 기간",
     "backupNow": "지금 백업",
-    "backupStarted": "백업이 시작되었습니다"
+    "backupStarted": "백업이 시작되었습니다",
+    "saved": "설정이 저장되었습니다",
+    "equipmentTypes": "설비유형 관리",
+    "addEquipmentType": "설비유형 추가",
+    "editEquipmentType": "설비유형 수정",
+    "editRepairType": "수리유형 수정",
+    "code": "코드",
+    "name": "이름",
+    "nameKo": "한국어 이름",
+    "nameVi": "베트남어 이름",
+    "category": "구분",
+    "categoryMain": "주요설비",
+    "categorySub": "부대설비",
+    "description": "설명",
+    "color": "색상",
+    "priority": "우선순위",
+    "priorityHighest": "최고",
+    "priorityHigh": "높음",
+    "priorityMedium": "중간",
+    "priorityLow": "낮음",
+    "priorityLowest": "최저",
+    "fillRequired": "필수 항목을 입력해주세요",
+    "confirmDelete": "정말 삭제하시겠습니까?",
+    "confirmDeleteTitle": "삭제 확인",
+    "confirmDeleteMessage": "을(를) 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.",
+    "equipmentTypeCreated": "설비유형이 생성되었습니다",
+    "equipmentTypeUpdated": "설비유형이 수정되었습니다",
+    "equipmentTypeDeleted": "설비유형이 삭제되었습니다",
+    "repairTypeCreated": "수리유형이 생성되었습니다",
+    "repairTypeUpdated": "수리유형이 수정되었습니다",
+    "repairTypeDeleted": "수리유형이 삭제되었습니다"
   },
   "profile": {
     "profileInfo": "프로필 정보",
