권한 관리 페이지 수정

--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -447,8 +447,10 @@
     "pageGroupDashboard": "대시보드",
     "pageGroupEquipment": "설비관리",
     "pageGroupMaintenance": "수리관리",
+    "pageGroupPM": "PM 관리",
     "pageGroupAnalytics": "분석",
     "pageGroupAI": "AI",
+    "pageGroupParts": "부품 정보",
     "pageGroupAdmin": "관리",
     "pageGroupProfile": "프로필",
     "permissionNote": "시스템 관리자 권한 안내",
