--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -447,8 +447,10 @@
     "pageGroupDashboard": "Bảng điều khiển",
     "pageGroupEquipment": "Quản lý thiết bị",
     "pageGroupMaintenance": "Quản lý sửa chữa",
+    "pageGroupPM": "Quản lý PM",
     "pageGroupAnalytics": "Phân tích",
     "pageGroupAI": "AI",
+    "pageGroupParts": "Thông tin phụ tùng",
     "pageGroupAdmin": "Quản trị",
     "pageGroupProfile": "Hồ sơ",
     "permissionNote": "Thông báo quyền quản trị viên hệ thống",
