AI 인사이트 업데이트

--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -54,7 +54,10 @@
     "weekdayThu": "목",
     "weekdayFri": "금",
     "weekdaySat": "토",
-    "month": "월"
+    "month": "월",
+    "clearAll": "전체 해제",
+    "showingFirst": "처음 {{count}}개 표시 중",
+    "refineSearch": "검색어를 더 구체화하세요"
   },
   "auth": {
     "login": "로그인",
@@ -282,7 +285,9 @@
     "startLabel": "시작",
     "minuteUnit": "분",
     "hourUnit": "시간",
-    "hourMinuteFormat": "{{hours}}시간 {{minutes}}분"
+    "hourMinuteFormat": "{{hours}}시간 {{minutes}}분",
+    "endTimeBeforeStart": "완료 시간이 시작 시간보다 이전입니다",
+    "startDateTime": "시작 일시"
   },
   "analytics": {
     "title": "통계 분석",
@@ -836,5 +841,67 @@
     "validSchedules": "{{count}}개의 일정이 유효합니다",
     "noTemplatesAvailable": "등록된 템플릿이 없습니다. 먼저 PM 템플릿을 생성해주세요.",
     "scheduleCreated": "PM 일정이 생성되었습니다"
+  },
+  "report": {
+    "dailyReport": "일간 리포트",
+    "weeklyReport": "주간 리포트",
+    "monthlyReport": "월간 리포트",
+    "customReport": "사용자 정의 리포트",
+    "dailyReportDesc": "일일 수리 실적 요약",
+    "weeklyReportDesc": "주간 수리 현황 및 분석",
+    "monthlyReportDesc": "월간 종합 분석 보고서",
+    "customReportDesc": "기간 및 조건을 선택하여 생성",
+    "selectPeriod": "기간 선택",
+    "startDate": "시작일",
+    "endDate": "종료일",
+    "selectTemplate": "리포트 템플릿 선택",
+    "generate": "리포트 생성",
+    "generating": "생성 중...",
+    "generated": "리포트 생성 완료",
+    "generateFailed": "리포트 생성에 실패했습니다",
+    "recentReports": "최근 생성된 리포트",
+    "noReportsYet": "생성된 리포트가 없습니다",
+    "reportName": "리포트명",
+    "type": "유형",
+    "period": "기간",
+    "createdAt": "생성일시",
+    "fileSize": "파일 크기",
+    "status": "상태",
+    "completed": "완료",
+    "failed": "실패",
+    "email": "이메일",
+    "emailSent": "이메일 발송 완료",
+    "noFileAvailable": "파일이 없습니다",
+    "includesContent": "리포트 포함 내용",
+    "summarySection": "요약 섹션",
+    "detailSection": "상세 섹션",
+    "analysisSection": "분석 섹션",
+    "kpiSummary": "KPI 요약",
+    "equipmentStatus": "설비 상태 현황",
+    "repairOverview": "수리 현황 개요",
+    "repairHistory": "수리 이력 상세",
+    "failureAnalysis": "고장 분석",
+    "partUsage": "부품 사용 현황",
+    "trendAnalysis": "트렌드 분석",
+    "technicianPerformance": "담당자별 실적",
+    "recommendations": "개선 권고사항",
+    "customOptions": "사용자 정의 옵션",
+    "selectSections": "포함할 섹션 선택",
+    "summarySectionDesc": "KPI 요약 및 수리 현황 개요",
+    "equipmentStatusSection": "설비 상태 현황",
+    "equipmentStatusSectionDesc": "설비 상태별 분류 현황",
+    "repairHistorySection": "수리 이력",
+    "repairHistorySectionDesc": "기간 내 수리 기록 상세",
+    "failureRankingSection": "고장 빈도 분석",
+    "failureRankingSectionDesc": "고장 빈도 상위 설비 순위",
+    "technicianSection": "담당자별 실적",
+    "technicianSectionDesc": "기술자별 수리 실적 및 평점",
+    "selectAll": "전체 선택",
+    "deselectAll": "전체 해제",
+    "selectEquipment": "설비 선택",
+    "selectEquipmentDesc": "특정 설비만 선택하여 리포트를 생성합니다. 선택하지 않으면 전체 설비가 포함됩니다.",
+    "searchEquipmentPlaceholder": "설비코드 또는 설비명으로 검색...",
+    "allEquipmentSelected": "전체 설비 대상 (설비를 선택하여 필터링)",
+    "equipmentSelectedCount": "{{count}}개 설비 선택됨"
   }
 }
