--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -54,7 +54,10 @@
     "weekdayThu": "T5",
     "weekdayFri": "T6",
     "weekdaySat": "T7",
-    "month": "tháng"
+    "month": "tháng",
+    "clearAll": "Bo chon tat ca",
+    "showingFirst": "Hien thi {{count}} dau tien",
+    "refineSearch": "Nhap cu the hon"
   },
   "auth": {
     "login": "Đăng nhập",
@@ -282,7 +285,9 @@
     "startLabel": "Bắt đầu",
     "minuteUnit": "phút",
     "hourUnit": "giờ",
-    "hourMinuteFormat": "{{hours}} giờ {{minutes}} phút"
+    "hourMinuteFormat": "{{hours}} giờ {{minutes}} phút",
+    "endTimeBeforeStart": "Thời gian kết thúc phải sau thời gian bắt đầu",
+    "startDateTime": "Ngày giờ bắt đầu"
   },
   "analytics": {
     "title": "Phân tích thống kê",
@@ -836,5 +841,67 @@
     "validSchedules": "{{count}} lịch hợp lệ",
     "noTemplatesAvailable": "Chưa có mẫu. Vui lòng tạo mẫu PM trước.",
     "scheduleCreated": "Đã tạo lịch PM"
+  },
+  "report": {
+    "dailyReport": "Bao cao Hang ngay",
+    "weeklyReport": "Bao cao Hang tuan",
+    "monthlyReport": "Bao cao Hang thang",
+    "customReport": "Bao cao Tuy chinh",
+    "dailyReportDesc": "Tom tat sua chua hang ngay",
+    "weeklyReportDesc": "Tinh hinh sua chua hang tuan",
+    "monthlyReportDesc": "Bao cao phan tich hang thang",
+    "customReportDesc": "Chon thoi gian va dieu kien",
+    "selectPeriod": "Chon thoi gian",
+    "startDate": "Ngay bat dau",
+    "endDate": "Ngay ket thuc",
+    "selectTemplate": "Chon mau bao cao",
+    "generate": "Tao bao cao",
+    "generating": "Dang tao...",
+    "generated": "Da tao bao cao",
+    "generateFailed": "Tao bao cao that bai",
+    "recentReports": "Bao cao gan day",
+    "noReportsYet": "Chua co bao cao nao",
+    "reportName": "Ten bao cao",
+    "type": "Loai",
+    "period": "Thoi gian",
+    "createdAt": "Ngay tao",
+    "fileSize": "Kich thuoc",
+    "status": "Trang thai",
+    "completed": "Hoan thanh",
+    "failed": "That bai",
+    "email": "Email",
+    "emailSent": "Da gui email",
+    "noFileAvailable": "Khong co file",
+    "includesContent": "Noi dung bao cao",
+    "summarySection": "Phan tom tat",
+    "detailSection": "Phan chi tiet",
+    "analysisSection": "Phan phan tich",
+    "kpiSummary": "Tom tat KPI",
+    "equipmentStatus": "Trang thai thiet bi",
+    "repairOverview": "Tong quan sua chua",
+    "repairHistory": "Lich su sua chua",
+    "failureAnalysis": "Phan tich hong hoc",
+    "partUsage": "Su dung phu tung",
+    "trendAnalysis": "Phan tich xu huong",
+    "technicianPerformance": "Hieu suat ky thuat vien",
+    "recommendations": "Khuyen nghi cai tien",
+    "customOptions": "Tuy chon tuy chinh",
+    "selectSections": "Chon phan bao cao",
+    "summarySectionDesc": "Tom tat KPI va tinh hinh sua chua",
+    "equipmentStatusSection": "Trang thai thiet bi",
+    "equipmentStatusSectionDesc": "Phan loai trang thai thiet bi",
+    "repairHistorySection": "Lich su sua chua",
+    "repairHistorySectionDesc": "Chi tiet sua chua trong ky",
+    "failureRankingSection": "Phan tich hong hoc",
+    "failureRankingSectionDesc": "Xep hang thiet bi hong nhieu",
+    "technicianSection": "Hieu suat ky thuat vien",
+    "technicianSectionDesc": "Hieu suat va danh gia ky thuat vien",
+    "selectAll": "Chon tat ca",
+    "deselectAll": "Bo chon tat ca",
+    "selectEquipment": "Chon thiet bi",
+    "selectEquipmentDesc": "Chon thiet bi cu the de tao bao cao. Neu khong chon, tat ca thiet bi se duoc bao gom.",
+    "searchEquipmentPlaceholder": "Tim theo ma hoac ten thiet bi...",
+    "allEquipmentSelected": "Tat ca thiet bi (chon de loc)",
+    "equipmentSelectedCount": "{{count}} thiet bi da chon"
   }
 }
