모바일 일부 수정

--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -93,13 +93,19 @@
     "report": "리포트",
     "ai": "AI 인사이트",
     "aiInsight": "자동 인사이트",
+    "aiInsights": "AI 인사이트",
     "aiChat": "AI 질의응답",
     "parts": "부품 정보",
     "admin": "관리",
     "userManagement": "사용자 관리",
     "rolePermission": "권한 관리",
+    "rolePermissions": "권한 관리",
     "settings": "시스템 설정",
-    "profile": "내 정보"
+    "profile": "내 정보",
+    "myInfo": "내 정보",
+    "more": "더보기",
+    "allMenus": "전체 메뉴",
+    "mainFeatures": "주요 기능"
   },
   "dashboard": {
     "title": "대시보드",
@@ -116,7 +122,9 @@
     "failureTop10": "고장 빈도 TOP 10",
     "recentRepairs": "최근 수리 목록",
     "startRepair": "수리 시작",
+    "repair": "수리 시작",
     "emergencyRepair": "긴급수리 등록",
+    "emergency": "긴급수리",
     "pmEquipment": "PM 예정",
     "noEmergency": "긴급수리 없음",
     "noEmergencyDesc": "현재 긴급수리가 필요한 설비가 없습니다",
