--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -93,13 +93,19 @@
     "report": "Báo cáo",
     "ai": "AI Insight",
     "aiInsight": "Insight tự động",
+    "aiInsights": "AI Insight",
     "aiChat": "Hỏi đáp AI",
     "parts": "Thông tin phụ tùng",
     "admin": "Quản trị",
     "userManagement": "Quản lý người dùng",
     "rolePermission": "Quản lý quyền",
+    "rolePermissions": "Quản lý quyền",
     "settings": "Cài đặt hệ thống",
-    "profile": "Thông tin cá nhân"
+    "profile": "Thông tin cá nhân",
+    "myInfo": "Thông tin cá nhân",
+    "more": "Thêm",
+    "allMenus": "Tất cả menu",
+    "mainFeatures": "Tính năng chính"
   },
   "dashboard": {
     "title": "Bảng điều khiển",
@@ -116,7 +122,9 @@
     "failureTop10": "TOP 10 hỏng hóc",
     "recentRepairs": "Sửa chữa gần đây",
     "startRepair": "Bắt đầu sửa chữa",
+    "repair": "Sửa chữa",
     "emergencyRepair": "Đăng ký khẩn cấp",
+    "emergency": "Khẩn cấp",
     "pmEquipment": "PM dự kiến",
     "noEmergency": "Không có sửa chữa khẩn cấp",
     "noEmergencyDesc": "Hiện không có thiết bị cần sửa chữa khẩn cấp",
